--- a/tests/test/CMakeLists.txt
+++ b/tests/test/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(test main.cpp)
-target_link_libraries(test gnodegui Qt6::Core Qt6::Widgets)
+target_link_libraries(test gnodegui Qt6::Core Qt6::Widgets nlohmann_json::nlohmann_json)
