Add static library keyword

--- a/GNodeGUI/CMakeLists.txt
+++ b/GNodeGUI/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE GNODEGUI_GUI_INCLUDES
 
 file(GLOB_RECURSE GNODEGUI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
-add_library(${PROJECT_NAME} ${GNODEGUI_SOURCES} ${GNODEGUI_GUI_INCLUDES})
+add_library(${PROJECT_NAME} STATIC ${GNODEGUI_SOURCES} ${GNODEGUI_GUI_INCLUDES})
 
 set(GNODEGUI_INCLUDE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include PRIVATE
                      ${CMAKE_CURRENT_SOURCE_DIR}/../external/json/include)
