Remove submodule json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ set(CMAKE_CXX_STANDARD 20)
 # ---  dependencies
 find_package(spdlog REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
+find_package(nlohmann_json REQUIRED)
 
-add_subdirectory(external)
 add_subdirectory(GNodeGUI)
 
 if(GNODEGUI_ENABLE_TESTS)
